@@ -1,3 +1,11 @@
+2013-06-04  Julien Bect  <julien.bect@supelec.fr>
+
+	Fix two bugs related to dataframe indexing.
+
+	* utils/@stk_dataframe/private/get_column_indicator.m: Fix two
+	bugs.
+	* utils/@stk_dataframe/subsref.m: Add tests.
+
 2013-05-18  Julien Bect  <julien.bect@supelec.fr>
 
 	Use function name as variable name in stk_feval.
